--- a/res/pages/About.html
+++ b/res/pages/About.html
@@ -164,12 +164,16 @@ nav .list-item ul {
       <!-- Card 2 -->
       <div class="col-md-6">
         <div class="card">
+          <img src="https://avatars.githubusercontent.com/u/167517698?v=4" class="card-img-top" alt="Profile 2">
           <div class="card-body">
-            <h5 class="card-title">Name 2</h5>
-            <p class="card-text">GitHub ID: id2</p>
-            <p class="card-text">DOB: dob2</p>
-            <p class="card-text">Roll No: roll2</p>
-            <p class="card-text">Contact No: contact2</p>
+            <br>  
+            <br>
+          <h5 class="card-title">Anish Singh Rajawat</h5>
+            <p class="card-text">GitHub ID: Anishsinghrajawat8269</p>
+            <p class="card-text">Bio:Bhind,Murena</p>
+            <p class="card-text">DOB: 25/08/2002</p>
+            <p class="card-text">Roll No: MU21BTCSE005</p>
+            <p class="card-text">Contact: rajawata777@gmail.com</p>
           </div>
         </div>
       </div>
